# jax-llm

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
scripts/: app.py  generate.py  story.sh  train.py
src/jax_llm/: __init__.py  config.py  data.py  generate.py  model.py  train.py
tests/: test_model.py
